--- a/trabajo.html
+++ b/trabajo.html
@@ -80,7 +80,7 @@
                         una pagina principal del local. Contando concarga,modificación,eliminación y actualización de productos de Librería.</p>
                       
                       <br>
-                      <a target="_blank" href="docs/CURRICULUM DESARROLLADOR MAURICIO TORRES 2021.pdf">Ver Mi curriculum</a>
+                      <a target="_blank" href="docs/DEVELOPER MAURICIO TORRES2021.pdf">Ver Mi curriculum</a>
   <!-- ======= Footer ======= -->
   <div id="footer" class="text-center">
     <div class="container">
