--- a/educacion.html
+++ b/educacion.html
@@ -72,7 +72,7 @@
                       <br>
 
 
-                      <a target="_blank" href="docs/DEVELOPER MAURICIO TORRES2021.pdf">Ver Mi curriculum</a>
+                      <a target="_blank" href="docs/developerMauricioTorres2021">Ver Mi curriculum</a>
 
   <!-- ======= Footer ======= -->
   <div id="footer" class="text-center">
