--- a/index.html
+++ b/index.html
@@ -204,17 +204,43 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/nosotros.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web</h4>
               <p>Andromeda</p>
               <a target="_blank" href="assets/img/nosotros.png" data-gall="portfolioGallery" class="venobox preview-link"
                 title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="http://miportafolios.byethost10.com/Imperial4/" class="details-link" title="More Details"><i
+              <a href="https://mauriciocba.github.io/Andromeda.io/" class="details-link" title="More Details"><i
                   class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img  id="brxnze" src="assets/img/brxnze.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Web</h4>
+              <p>Brxnze</p>
+              <a target="_blank" href="assets/img/brxnze.png" data-gall="portfolioGallery" class="venobox preview-link"
+                title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="https://mauriciocba.github.io/BrxnzeBeats.io/" class="details-link" title="More Details"><i
+                  class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img  id="brxnze" src="assets/img/miTv.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Web</h4>
+              <p>Mi Tv</p>
+              <a target="_blank" href="assets/img/miTv.png" data-gall="portfolioGallery" class="venobox preview-link"
+                title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="https://mauriciocba.github.io/MiTvd.io/" class="details-link" title="More Details"><i
+                  class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/github_png.jpg" class="img-fluid" alt="">
@@ -227,6 +253,7 @@
                   class="bx bx-link"></i></a>
             </div>
           </div>
+
 
         </div>
 
