--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="hero-content">
         <h1> <span class="typed"></span></h1>
-        <p class="typed-items" data-typed-person="Mauricio Torres">Desarrollador</p>
+        <p class="typed-items" data-typed-person="Mauricio Torres">Front End Developer</p>
 
         <ul class="list-unstyled list-social">
           <li><a href="https://www.facebook.com/mauricio.torres.501"><i class="ion-social-facebook"></i></a></li>
