--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <img src="assets/img/github_png.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Git</h4>
-              <p>Portafolio</p>
+              <p>Repositorio</p>
               <a target="_blank" href="assets/img/github_png.jpg" data-gall="portfolioGallery" class="venobox preview-link"
                 title="App 1"><i class="bx bx-plus"></i></a>
               <a href="https://github.com/Mauriciocba" class="details-link" title="More Details"><i
