--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/estilo.css">
 
 </head>
 
@@ -54,12 +55,12 @@
     </div>
   </nav><!-- End Navbar -->
 
-  <!-- ======= Hero Section ======= -->
-  <div id="hero" class="home">
+  <!-- ======= Hero id="hero" Section ======= -->
+  <div  id="particles-js"  class="home">
 
-    <div class="container">
+    <div id="h1Titulo" class="container">
       <div class="hero-content">
-        <h1> <span class="typed"></span></h1>
+        <h1 > <span class="typed"></span></h1>
         <p class="typed-items" data-typed-person="Mauricio Torres">Front End Developer</p>
 
         <ul class="list-unstyled list-social">
@@ -430,6 +431,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="./assets/js/particles.min.js"></script>
+  <script src="./assets/js/particulas.js"></script>
 
 </body>
 
