--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@
                   class="bx bx-link"></i></a>
             </div>
           </div>
+		
+		
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img  id="brxnze" src="assets/img/brxnze.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Web</h4>
+              <p>Torres de Delicias</p>
+              <a target="_blank" href="assets/img/cupcake.png" data-gall="portfolioGallery" class="venobox preview-link"
+                title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="https://mauriciocba.github.io/torresdedelicias.io/index.html" class="details-link" title="More Details"><i
+                  class="bx bx-link"></i></a>
+            </div>
+          </div>
 
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
