--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 		
 		
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img  id="brxnze" src="assets/img/brxnze.png" class="img-fluid" alt="">
+            <img  id="brxnze" src="assets/img/cupcake.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web</h4>
               <p>Torres de Delicias</p>
