--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
         <div class="row portfolio-container">
 		
 		 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/estatuto-min" class="img-fluid" alt="">
+            <img src="assets/img/estatuto-min.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web</h4>
               <p>Academia de derecho MAAT</p>
-              <a target="_blank" href="assets/img/estatuto-min" data-gall="portfolioGallery" class="venobox preview-link"
+              <a target="_blank" href="assets/img/estatuto-min.jpg" data-gall="portfolioGallery" class="venobox preview-link"
                 title="App 1"><i class="bx bx-plus"></i></a>
               <a href="www.aderechomaat.com" class="details-link" title="More Details"><i
                   class="bx bx-link"></i></a>
