--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <p>Academia de derecho MAAT</p>
               <a target="_blank" href="assets/img/estatuto-min.jpg" data-gall="portfolioGallery" class="venobox preview-link"
                 title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="www.aderechomaat.com" class="details-link" title="More Details"><i
+              <a href="https://www.aderechomaat.com" target="_blank" class="details-link" title="More Details"><i
                   class="bx bx-link"></i></a>
             </div>
           </div>
