--- a/index.html
+++ b/index.html
@@ -280,6 +280,18 @@
                   class="bx bx-link"></i></a>
             </div>
           </div>
+		
+		<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="https://cdn-3.expansion.mx/dims4/default/e7886b4/2147483647/strip/true/crop/900x506+0+0/resize/1200x675!/format/webp/quality/90/?url=https%3A%2F%2Fcdn-3.expansion.mx%2F8f%2F08%2Fa72fbe49448a97f323d9bf8940bb%2Fp-p.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Web</h4>
+              <p>Proyecto Final CODER HOUSE</p>
+              <a target="_blank" href="assets/img/estatuto-min.jpg" data-gall="portfolioGallery" class="venobox preview-link"
+                title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="https://mauriciocba.github.io/ProyectoFinalCoder.io/" target="_blank" class="details-link" title="More Details"><i
+                  class="bx bx-link"></i></a>
+            </div>
+          </div>
 
 
         </div>
