--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <code><h2>CONOCIMIENTOS</h2></code>
       <div class="card-group mt-3">
 
-        <div class="card text-center border-info">
+      <!--<div class="card text-center border-info">
           <div class="card-body">
             <h4 class="card-title">NIVEL</h4>
             <ul class="list-group">
@@ -121,7 +121,8 @@
             </ul>
             
           </div>
-        </div>  
+        </div>--> 
+
 
         <div class="card text-center border-info">
           <div class="card-body">
